Update connections tab